--- a/for_instructors/guide/ethics/index.qmd
+++ b/for_instructors/guide/ethics/index.qmd
@@ -5,7 +5,7 @@ author: "Your Name"
 date: "YYYY-MM-DD"
 categories: ["Category1", "Category2", "Category3"]
 toc: true
-draft: false
+draft: true
 code-link: true
 code-copy: true
 title-block-banner: true
