--- a/index.qmd
+++ b/index.qmd
@@ -7,8 +7,9 @@ comments: false
 ---
 
 ```{=HTML}
-
-
+<!doctype html>
+<html lang="en">
+<head>
    <title>Animation Test</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <style>
@@ -101,9 +102,6 @@ comments: false
         </div>
 
         <canvas id="canvas"></canvas>
-        <button class="btn-21"> 
-            <span> Learn more </span> 
-        </button>
         <canvas id="demo-canvas"></canvas>
     </div>
 
@@ -139,12 +137,12 @@ comments: false
     </div>
     
 </section>
-</div>
 
-
+</body>
     <script src="assets/js/demo-2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js"></script>
     <script src="assets/js/rAF.js"></script>
     <script src="assets/js/layer_home.js"></script>
+</html>
 ```
