--- a/for_instructors/instructors.qmd
+++ b/for_instructors/instructors.qmd
@@ -1,21 +1,10 @@
 ---
-title: ""
-listing:
-  - id: for-instructors
-    contents: "guide/*/index.qmd"
-    type: default
-    fields: [image, date, title, subtitle, categories, author, reading-time]  
-    sort: "date desc"
-    # categories: cloud
-    sort-ui: true
-    filter-ui: true
-    page-size: 10
 page-layout: full
+toc: false
 title-block-banner: false
 include-in-header: ../meta.html
 comments: false
 ---
-
 
 # For instructors
 
@@ -24,10 +13,43 @@ Welcome to the "For Instructors" section of "Data Science X Ethics". As educator
 We have compiled a set of resources in the sections <a href="../ethics/ethics.html">Ethics</a> and <a href="../data_science/data_science.html"> 
 Data Science</a>. Those resources come in a modular format, i.e., they can be used as standalone units or combined to create a comprehensive course. We have designed these resources to be accessible to non-ethicists and non-data scientists, making it easier for you to integrate them into your curriculum.
 
-In addition, below you find introductory slide decks that you can use to introduce the topics of ethics and data science to your students. Feel free to use and adapt these slides to suit your teaching style and audience.
+In addition, below you find introductory slide decks that you can use to introduce the topics of ethics and data science to your students. Feel free to use and adapt these slides to suit your teaching style and audience. The raw RMarkdown files are stored in this [GitHub repository](https://github.com/ds-ethics/dse-slides) so you can easily modify them to fit your needs.
 
 
 ## Slide decks
 
-::: {#for-instructors}
-:::
+```{=HTML}
+<style type="text/css">
+.tg  {border:none;border-collapse:collapse;border-color:#ccc;border-spacing:0;}
+.tg td{background-color:#fff;border-color:#ccc;border-style:solid;border-width:0px;color:#333;
+  font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{background-color:#f0f0f0;border-color:#ccc;border-style:solid;border-width:0px;color:#333;
+  font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-c10m{background-color:#f9f9f9;border-color:#000000;font-weight:bold;text-align:left;vertical-align:top}
+.tg .tg-mcqj{border-color:#000000;font-weight:bold;text-align:left;vertical-align:top}
+.tg .tg-73oq{border-color:#000000;text-align:left;vertical-align:top}
+.tg .tg-i817{background-color:#f9f9f9;border-color:#000000;text-align:left;vertical-align:top}
+@media screen and (max-width: 767px) {.tg {width: auto !important;}.tg col {width: auto !important;}.tg-wrap {overflow-x: auto;-webkit-overflow-scrolling: touch;}}</style>
+<div class="tg-wrap"><table class="tg"><tbody>
+  <tr>
+    <td class="tg-mcqj"></td>
+    <td class="tg-73oq"></td>
+  </tr>
+  <tr>
+    <td class="tg-c10m"><a href="https://raw.githack.com/ds-ethics/dse-slides/main/ds-01-intro/ds-01-intro.html"><img src="https://raw.githack.com/ds-ethics/dse-slides/main/ds-01-intro/ds-01-intro-title.png" width="400" height="225"></a></td>
+    <td class="tg-i817"><a href="https://raw.githack.com/ds-ethics/dse-slides/main/ds-01-intro/ds-01-intro.html"><img src="https://raw.githack.com/ds-ethics/dse-slides/main/ds-01-intro/ds-01-intro-toc.png" width="400" height="225"></a></td>
+  </tr>
+  <tr>
+    <td class="tg-mcqj"><a href="https://raw.githack.com/ds-ethics/dse-slides/main/ds-02-bigdata/ds-02-bigdata.html"><img src="https://raw.githack.com/ds-ethics/dse-slides/main/ds-02-bigdata/ds-02-bigdata-title.png" width="400" height="225"></a></td>
+    <td class="tg-73oq"><a href="https://raw.githack.com/ds-ethics/dse-slides/main/ds-02-bigdata/ds-02-bigdata.html"><img src="https://raw.githack.com/ds-ethics/dse-slides/main/ds-02-bigdata/ds-02-bigdata-toc.png" width="400" height="225"></a></td>
+  </tr>
+  <tr>
+    <td class="tg-c10m"><a href="https://raw.githack.com/ds-ethics/dse-slides/main/ds-03-machinelearning/ds-03-machinelearning.html"><img src="https://raw.githack.com/ds-ethics/dse-slides/main/ds-03-machinelearning/ds-03-machinelearning-title.png" width="400" height="225"></a></td>
+    <td class="tg-i817"><a href="https://raw.githack.com/ds-ethics/dse-slides/main/ds-03-machinelearning/ds-03-machinelearning.html"><img src="https://raw.githack.com/ds-ethics/dse-slides/main/ds-03-machinelearning/ds-03-machinelearning-toc.png" width="400" height="225"></a></td>
+  </tr>
+  <tr>
+    <td class="tg-mcqj"><a href="https://raw.githack.com/ds-ethics/dse-slides/main/ds-04-everydayethics/ds-04-everydayethics.html"><img src="https://raw.githack.com/ds-ethics/dse-slides/main/ds-04-everydayethics/ds-04-everydayethics-title.png" width="400" height="225"></a></td>
+    <td class="tg-73oq"><a href="https://raw.githack.com/ds-ethics/dse-slides/main/ds-04-everydayethics/ds-04-everydayethics.html"><img src="https://raw.githack.com/ds-ethics/dse-slides/main/ds-04-everydayethics/ds-04-everydayethics-toc.png" width="400" height="225"></a></td>
+  </tr>
+</tbody></table></div>
+```
