--- a/index.qmd
+++ b/index.qmd
@@ -100,6 +100,8 @@ comments: false
 </div>
 
         </div>
+       <canvas id="canvas"></canvas>
+
 <!--        <canvas id="demo-canvas"></canvas> -->
     </div>
 
