--- a/data_science/data_science.qmd
+++ b/data_science/data_science.qmd
@@ -11,6 +11,7 @@ listing:
     filter-ui: true
     page-size: 10
 page-layout: full
+toc: false
 title-block-banner: false
 include-in-header: ../meta.html
 comments: false
