--- a/404.qmd
+++ b/404.qmd
@@ -28,7 +28,7 @@ background-clip: text;
 
 
  body {
-  background: linear-gradient(to right, #000428, #004e92);
+  background: linear-gradient(to right, #2E3192, #1BFFFF);
 }
 
 
