--- a/ethics/ethics/approaches/index.qmd
+++ b/ethics/ethics/approaches/index.qmd
@@ -20,7 +20,7 @@ code-link: true
 code-copy: true
 title-block-banner: true
 comments: false
-image: images/Social.png #path/to/image.png
+image: images/brain.png #path/to/image.png
 include-in-header: meta.html
 filters:
    - lightbox
